--- CHANGELOG ---

--- Assimulo-3.2.2 --
    * Fixed a regression with Radau5ODE from 3.2.1.

--- Assimulo-3.2.1 --
    * Improved detection of BLAS
    * Minor performance improvements

--- Assimulo-3.2 ---
    * Added support for Cython user extensions

--- Assimulo-3.1 ---
    * Added support for building Assimulo with Intel and MSVC on Windows (ticket: 434)
    * Added support for Sundials 4.1 (ticket:431)
    * Fixed so that *.pyf files are included in the source distro (ticket:430)
    * Moved ImportError output to stderr instead of stdout (ticket:429)
    * Disabled test dasp3_basic because problem appears to numerically unstable.

--- Assimulo-3.0 ---
    * Changed so that setuptools is used (support creating wheels) 
      (ticket:426)
    * Fixed so that sparse return type can be used from the jacobian
      method (ticket:423)
    * Delayed import of matplotlib
    * Fixed memory leaks in CVode and IDA (ticket:424)
    * Removed version check for numpy (it was only a problem for old 
      numpy version < 1.6.1 which we do no longer guard against) ticket:409)
    * Added license and changelog to the install folder (ticket:410)
    * Deprecated the setup option "sundials-with-superlu". SuperLU support
      using Sundials is not automatically checked (ticket:414)
    * Added support for Sundials 3.1 (ticket:418)
    * Renamed the option stablimit to stablimit (ticket:417)

--- Assimulo-2.9 ---
    * Added option to specify to use the 2-norm in CVode (ticket:401)
    * Added option to set max nonlinear iteration in CVode (ticket:400)
    * Renamed hmax to maxh in LSODAR for consistency (ticket:399)
    * Fixed version checking in setup for numpy (ticket:394)
    * Fixed bug with ncp list and backward integration (ticket:393)
    * Added method to retrieve current order in IDA (ticket:395)

--- Assimulo-2.8 ---
    * Added support for Sundials 2.6 (ticket:382)
    * Added support for sparse Jacobians (together with Sundials) 
      (ticket:383)